# spielispieli

./: .gitignore  README.md  _spielispieli.code-workspace  pyproject.toml
src/spielispieli/: __init__.py  main.py  utils.py
src/spielispieli/maths/: __init__.py  vectors.py
